# MemoryScaner

./: README.md  pyproject.toml
.kiro/settings/: mcp.json
src/memory_scanner/: __init__.py  __main__.py  server.py
