[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-scanner-mcp"
version = "0.0.2"
description = "基于 pymem 的内存扫描与修改 MCP 服务器，支持进程内存读写、扫描、模式搜索等功能"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "miloira" },
]
keywords = ["mcp", "memory", "scanner", "pymem", "process"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "pymem>=1.13.1",
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/miloira/MemoryScaner"
Repository = "https://github.com/miloira/MemoryScaner"
Issues = "https://github.com/miloira/MemoryScaner/issues"

[project.scripts]
memory-scanner-mcp = "memory_scanner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_scanner"]
